# SSAFY_autonomy

./: README.md
.githooks/: commit-msg  cpptest.py  prepare-commit-msg
AI/: MaiL.py  README.md  TF_model_convert_cc.ipynb  pipeline.ipynb  sample.py
AI/candidates/: LSTM_231026.ipynb  LSTM_Sample.ipynb  LSTM_Tensorflow.ipynb
AI/candidates/LSTM_DNN_01/: getSampleData_231103_01.ipynb  useSampleData_231103_01.ipynb  useTFLite.ipynb
AI/candidates/LSTM_DNN_02/: getSampleData_231103_02.ipynb  model_231103_02.tflite
AI/getData/: influx.py
AI/make_data/: getSampleData.ipynb
MLOps/: 0_model_training_pipeline.ipynb  1_DataPipelineTest-Copy1.ipynb  2_modelTest.ipynb  AuthorizationPolicy.yaml  Dockerfile  EnvoyFilter.yaml  Minio_model_rev.ipynb  component_info.yaml  config-map.yaml  existing_pvc_data_manipulation_pipeline.yaml  poddefault.yaml  profile.yaml
backend/: README.md
backend/fastapi/FastAPI0.0.10/: main.py
backend/fastapi/FastAPI0.0.7/: pyproject.toml
backend/fastapi/FastAPI0.0.8/: DBstart.py  Dockerfile  main.py
backend/fastapi/FastAPI0.0.9/: main.py
backend/fastapi/FastAPI0.1.0/: config.ini  pyproject.toml
backend/fastapi/FastAPI0.1.0/router/: RawDataGet.py  TfliteFileSend.py
backend/fastapi/FastAPI1.0.0/: Dockerfile  (+1 more)
backend/influxDB/: Dockerfile
backend/nginx/: Dockerfile  test.conf
device/: README.md
device/ProjectMAIL/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old  size-components.txt  size-files.txt
device/ProjectMAIL/main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  get_set_time.c  http_client.c  http_client.cpp  http_client.h  light_control.cpp  matter_start.cpp  matter_start.h  model.h  my_time.h  on-device-AI.cpp  ondevice_ai.cpp  ondevice_ai.h  sensor.cpp  test.c  test.h
device/ProjectMAIL/main/includes/: get_set_time.h  http_client.h  light_control.h  matter_start.h  ondevice_ai.h  sensor.h
device/built-in-LED/: CMakeLists.txt
device/dimmable_tflite/: CMakeLists.txt
device/esp_http_client/: partitions.csv  sdkconfig  sdkconfig.old
device/lighting-app/: sdkconfig  sdkconfig.old
(+62 files in other folders)
