[tool.poetry]
name = "mail"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
influxdb-client = "^1.38.0"
minio = "^7.1.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
